[gd_scene load_steps=5 format=2]

[ext_resource path="res://EndScreen.gd" type="Script" id=1]
[ext_resource path="res://RichTextTransparent.tres" type="Theme" id=2]
[ext_resource path="res://Theme.theme" type="Theme" id=3]
[ext_resource path="res://assets/main/tile149.png" type="Texture" id=4]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0.196078, 0.0862745, 0.588235, 1 )

[node name="TheEnd\?\?\?" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 8.0
margin_right = 156.0
margin_bottom = 48.0
theme = ExtResource( 2 )
text = "You made it to the end!  But, did you succeed?  Let's find out!"

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 56.0
margin_right = 228.0
margin_bottom = 72.0
theme = ExtResource( 2 )

[node name="Time" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 80.0
margin_right = 228.0
margin_bottom = 96.0
theme = ExtResource( 2 )

[node name="FinalScore" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 105.0
margin_right = 228.0
margin_bottom = 121.0
theme = ExtResource( 2 )

[node name="Success" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 130.0
margin_right = 228.0
margin_bottom = 161.0
theme = ExtResource( 2 )

[node name="HighScore" type="RichTextLabel" parent="."]
margin_left = 160.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 48.0
theme = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 128.0
margin_top = 155.0
margin_right = 192.0
margin_bottom = 175.0
theme = ExtResource( 3 )
text = "QUIT"
icon = ExtResource( 4 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
